don't close panes with C-w, overrides C-w-w in vim

--- a/tmux/master.conf
+++ b/tmux/master.conf
@@ -24,7 +24,7 @@ unbind-key -n F9;   bind-key -n F9   select-window -t :9
 unbind-key -n F10;  bind-key -n F10  select-window -t :10
 
 # Close windows with C-w, browser style.
-bind-key -n C-w kill-pane
+# bind-key -n C-w kill-pane
 
 # Reload master-conf
 bind-key r source-file ~/.tmux/master.conf
